--- a/i3/config
+++ b/i3/config
@@ -58,9 +58,7 @@ font pango:Open Sans 10
 # chose a FreeType font, such as:
 # font pango:DejaVu Sans Mono 10
 
-# screen brightness
-bindsym F5 exec xbacklight -dec 10
-bindsym F6 exec xbacklight -inc 10
+
 
 # Make the currently focused window a scratchpad
 bindsym $mod+Shift+n move scratchpad
@@ -208,6 +206,7 @@ bar {
      statusline $s_base_e
   }
   mode hide
+  modifier $mod
   hidden_state hide
   status_command conky -c /home/alice/.conkyrc
 }
@@ -217,9 +216,13 @@ exec --no-startup-id urxvt
 exec --no-startup-id firefox
 
 # starting a specially named term automatically 
-exec --no-startup-id urxvt -name scratchpad -e "/usr/bin/vim scratchpad.txt"
+exec --no-startup-id urxvt -name scratchpad -e "vim scratchpad.txt"
 # move this to scratchpad, if active
-for_window [class="URxvt" instance="scratchpad"] move scratchpad
+for_window [class="urxvt" instance="scratchpad"] move scratchpad
 
+
+# screen brightness
+bindsym Mod4+Up exec bright more 
+bindsym Mod4+Down exec bright less
 
 
