--- a/config/gtk-2.0/gtkfilechooser.ini
+++ b/config/gtk-2.0/gtkfilechooser.ini
@@ -2,10 +2,10 @@
 LocationMode=filename-entry
 ShowHidden=false
 ShowSizeColumn=true
-GeometryX=54
-GeometryY=257
+GeometryX=246
+GeometryY=235
 GeometryWidth=852
 GeometryHeight=630
-SortColumn=name
-SortOrder=ascending
+SortColumn=modified
+SortOrder=descending
 StartupMode=recent
